--- a/style.css
+++ b/style.css
@@ -1,57 +1,29 @@
-*{
+body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    position: relative;
+    background-color: #333;
+    min-height: 100vh;
 }
-/* -- Navigation Bar -- */
-.topnav {
-    width: 100%;
-    overflow: hidden;
-    background-color: var(--primary-black);
-    position: sticky;
-    top: 0;
-    z-index: 9;
-}
-.topnav a {
-    float: left;
-    display: block;
-    color: var(--primary-white2);
+.container{
+    width: 200px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    border-radius: 20px;
+    padding: 14px;
+    box-shadow: 0 0 5px #000000;
     text-align: center;
-    padding: 14px 16px;
+}
+.container a{
+    font-size: 20px;
     text-decoration: none;
-    font-size: 17px;
+    display: block;
+    color: #fff;
 }
-.topnav a:hover {
-    background-color: var(--light-black);
-    color: white;
-}
-.topnav a.active {
-    background-color: var(--dark-black);
-    color: var(--primary-white);
-}
-.topnav .icon {
-    display: none;
-}
-.topnav strong{
-    padding-right: 8px;
-}
-@media screen and (max-width: 700px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
-}
-@media screen and (max-width: 700px) {
-    .topnav.responsive {position: relative;justify-content: space-between;}
-    .topnav.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
+.container a:hover{
+    font-size: 22px;
+    text-decoration: underline;
 }
