--- a/Stopwatch/style.css
+++ b/Stopwatch/style.css
@@ -57,3 +57,15 @@ body{
   .buttons button:nth-last-child(1){
     background-color: #20b380;
   }
+
+@media screen and (max-width:530px) {
+    body{
+        margin: auto;
+        align-items: center;
+    }
+    .container{
+        top: 50%;
+        left: 50%;
+        transform: rotate(90deg);
+    }
+}
