--- a/Stopwatch/style.css
+++ b/Stopwatch/style.css
@@ -59,13 +59,13 @@ body{
   }
 
 @media screen and (max-width:530px) {
-    body{
-        margin: auto;
-        align-items: center;
-    }
     .container{
-        top: 50%;
-        left: 50%;
+        margin:0 auto;
+        top: 20%;
         transform: rotate(90deg);
+        left: inherit;
+    }
+    .buttons{
+        margin-top: 30px;
     }
 }
